@@ -1,1 +1,1 @@
-<a href="[[~[[++discuss.user_resource]]]]?user=[[+id]]">[[+username]]</a>,
+<a href="[[~[[++discuss.user_resource]]]]?user=[[+id]]" [[+color:notempty=`style="color: [[+color]]`]]">[[+username]]</a>,
